The model of achievements has been finished

--- a/Application/Home/View/AddContent/AddContent.html
+++ b/Application/Home/View/AddContent/AddContent.html
@@ -38,16 +38,16 @@
       <?php
         if($infoType=="con-pick"){
       ?>
-      class="btn btn-default btn-xs btnPick comment" 
+      class="btn btn-primary btn-xs btnPick comment" 
       <?php
         }else{
       ?>
-      class="btn btn-default btn-xs btnLose comment" 
+      class="btn btn-primary btn-xs btnLose comment" 
       <?php
         }
       ?>
 
-      id="{$content_id}">评论</button>
+      id="{$content_id}"><span class="glyphicon glyphicon-comment"></span> 评论</button>
       <button 
       <?php
         if($infoType=="con-pick"){
@@ -60,7 +60,7 @@
       <?php
         }
       ?>
-       id="{$content_id}">详情</button>
+       id="{$content_id}"><span class="glyphicon glyphicon-list-alt"></span> 详情</button>
     </p>
   </div>
 </div>
