changed some codes that ChenZhenming wrote

--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -182,11 +182,11 @@
                 <label for="type" class="col-sm-3 control-label">类型：</label>
                 <div class="col-xs-6">
               <select class="form-control" id="pc_type">
-                 <option id="inlineCheckbox1" value="book"> 书本文具</option>
-                <option  id="inlineCheckbox2" value="electricity"> 电子产品</option>
-                <option  id="inlineCheckbox3" value="car"> 卡片证件</option>
+                 <option id="inlineCheckbox1" value="stationery"> 书本文具</option>
+                <option  id="inlineCheckbox2" value="electronic"> 电子产品</option>
+                <option  id="inlineCheckbox3" value="card"> 卡片证件</option>
                 <option  id="inlineCheckbox4" value="money"> 钱包钱币</option>
-                <option  id="inlineCheckbox5" value="key"> 钥匙挂件</option>
+                <option  id="inlineCheckbox5" value="keys"> 钥匙挂件</option>
                 <option  id="inlineCheckbox6" value="others"> 其它等等</option>
               </select>
             </div>
@@ -270,11 +270,11 @@
                 <label for="type" class="col-sm-3 control-label">类型：</label>
                 <div class="col-xs-6">
               <select class="form-control" id="ls_type">
-                 <option id="inlineCheckbox1" value="book"> 书本文具</option>
-                <option  id="inlineCheckbox2" value="electricity"> 电子产品</option>
-                <option  id="inlineCheckbox3" value="car"> 卡片证件</option>
+                 <option id="inlineCheckbox1" value="stationery"> 书本文具</option>
+                <option  id="inlineCheckbox2" value="electronic"> 电子产品</option>
+                <option  id="inlineCheckbox3" value="card"> 卡片证件</option>
                 <option  id="inlineCheckbox4" value="money"> 钱包钱币</option>
-                <option  id="inlineCheckbox5" value="key"> 钥匙挂件</option>
+                <option  id="inlineCheckbox5" value="keys"> 钥匙挂件</option>
                 <option  id="inlineCheckbox6" value="others"> 其它等等</option>
               </select>
             </div>
