manage page first

--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -60,7 +60,7 @@
                 <li class="divider"></li>
                 <li id="logoutButton" class="disabled"><a href="#">退 出<span class="glyphicon glyphicon-log-out"></span></a></li>
                 <li class="divider"></li>
-                <li id="logoutButton" class="disabled"><a href="#">管 理<span class="glyphicon glyphicon-tower"></span></a></li>
+                <li class="disabled" id="manageButton"><a href="#">管 理<span class="glyphicon glyphicon-tower"></span></a></li>
               </ul>
             </li>
           </ul>
