--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -53,14 +53,14 @@
           <ul class="nav navbar-nav navbar-right">
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" id="account">
-                账户<span class="glyphicon glyphicon-user"></span><b class="caret"></b>
+                {$username}<span class="glyphicon glyphicon-user"></span><b class="caret"></b>
               </a>
               <ul class="dropdown-menu">
-                <li id="loginButton"><a href="#">登 陆<span class="glyphicon glyphicon-log-in"></span></a></li>
+                <li id="loginButton" class="{$class1}"><a href="#">登 陆<span class="glyphicon glyphicon-log-in"></span></a></li>
                 <li class="divider"></li>
-                <li id="logoutButton" class="disabled"><a href="#">退 出<span class="glyphicon glyphicon-log-out"></span></a></li>
+                <li id="logoutButton" class="{$class2}"><a href="#">退 出<span class="glyphicon glyphicon-log-out"></span></a></li>
                 <li class="divider"></li>
-                <li class="disabled" id="manageButton"><a href="#">管 理<span class="glyphicon glyphicon-tower"></span></a></li>
+                <li id="manageButton" class="{$class2}"><a href="#">管 理<span class="glyphicon glyphicon-tower"></span></a></li>
               </ul>
             </li>
           </ul>
@@ -91,14 +91,14 @@
           <!--窗口主体-->
             <form class="form-horizontal" id="loginForm" role="form">
               <div class="form-group">
-                <label for="username" class="col-sm-2 control-label">用户名：</label>
+                <label for="username" class="col-sm-3 control-label">用户名：</label>
                 <div class="loginInput">
                   <input type="username" class="form-control" id="username" placeholder="用户名">
                 </div>
               </div>
 
               <div class="form-group">
-                <label for="passward" class="col-sm-2 control-label">密码：</label>
+                <label for="passward" class="col-sm-3 control-label">密码：</label>
                 <div class="loginInput">
                   <input type="password" class="form-control" id="password" placeholder="密码">
                 </div>
@@ -356,11 +356,6 @@
   	<div class="vBar2" id="IPick2">我弄丢了...</div>
   	<div class="vBar2" id="ourHonor2">类型筛选</div>
 
-    <div id="secondHead">
-      <img src="Public/img/herald.png" id="heraldLogo">
-      <div id="secondTitle"><h2>东南大学先声网 - 网络先驱的声音</h2></div>
-    </div>
-
    <!-- Modal detail -->
     <div class="modal fade" id="detail" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
       <div class="modal-dialog">
@@ -381,18 +376,24 @@
       </div><!-- /.modal-dialog -->
     </div><!-- /.modal -->
 
+    <div id="con-border">
+      <div id="secondHead">
+        <img src="Public/img/herald.png" id="heraldLogo">
+        <div id="secondTitle"><h2>东南大学先声网 - 网络先驱的声音</h2></div>
+      </div>
 
-    <div id="container">
-        <div id="content-inner"></div>
-        <div class="clear"></div>
-        <div id="addmore" class="btn btn-default">加载更多</div>
+      <div id="container">
+          <div id="content-inner"></div>
+          <div class="clear"></div>
+          <div id="addmore" class="btn btn-default">加载更多</div>
+      </div>
     </div>
-    
-
 
     <div id="foot">
-      <h5> CopyRight © 2001-2014 Herald.seu.edu.cn</h5>
+      <h5> Copyright © 2001-2014 Herald.seu.edu.cn</h5>
     </div>
+
+
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="Public/js/jquery.js"></script>
