--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -22,7 +22,7 @@
 			<div id="myTitle1"><strong>失物招领</strong></div>
 			<div id="myTitle2">您口袋的小补丁</div>
 		</div>
-    
+
     <div id="nav">
       <nav class="navbar navbar-default" id="navbar" role="navigation">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -359,11 +359,6 @@
     <div class="vBar2" id="IPick2">我弄丢了...</div>
     <div class="vBar2" id="ourHonor2">类型筛选</div>
 
-    <div id="secondHead">
-      <img src="Public/img/herald.png" id="heraldLogo">
-      <div id="secondTitle"><h2>东南大学先声网 - 网络先驱的声音</h2></div>
-    </div>
-
     <!-- Modal detail -->
     <div class="modal fade" id="detail" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
       <div class="modal-dialog">
@@ -385,14 +380,23 @@
       </div><!-- /.modal-dialog -->
     </div><!-- /.modal -->
 
-    <div id="container">
-        <div id="content-inner"></div>
-        <div class="clear"></div>
-        <div id="addmore" class="btn btn-default">加载更多</div>
+
+
+    <div id="con-border">
+      <div id="secondHead">
+        <img src="Public/img/herald.png" id="heraldLogo">
+        <div id="secondTitle"><h2>东南大学先声网 - 网络先驱的声音</h2></div>
+      </div>
+
+      <div id="container">
+          <div id="content-inner"></div>
+          <div class="clear"></div>
+          <div id="addmore" class="btn btn-default">加载更多</div>
+      </div>
     </div>
 
     <div id="foot">
-      <h5> CopyRight © 2001-2014 Herald.seu.edu.cn</h5>
+      <h5> Copyright © 2001-2014 Herald.seu.edu.cn</h5>
     </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
