--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -396,7 +396,7 @@
     </div>
 
     <div id="foot">
-      <h5> Copyright © 2001-2014 Herald.seu.edu.cn</h5>
+      <h5> Copyright © 2001-2014 Herald.seu.edu.cn。com</h5>
     </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
