--- a/Public/css/manage.css
+++ b/Public/css/manage.css
@@ -27,6 +27,46 @@ body
 	padding-bottom: 105px;
 }
 
+
+#ctn-head{
+	width: 100%;
+	height: 46px;
+
+}
+.ctn-font {
+padding-left: 70px;
+font-size: 2.6em;
+color: #4DBDCB;
+font-weight: normal;
+font-style: normal;
+line-height: 1.5;
+text-indent: 0;
+}
+#left
+{
+	width:400px;
+	height: 700px;
+	float:left;
+	padding-top: 40px;
+	display: inline-block;
+	margin-right: 1px;
+}
+#right
+{
+	width: 1200px;
+	float: left;
+	display: inline-block;
+	/*border-left: 1px solid  #99CCFF;*/
+	padding-left: 25px;
+	padding-right: 25px;
+	padding-top: 12px;
+	min-height: 600px;
+	height: auto;
+	overflow: visible;
+
+}
+
+/***/
 #foot
 {
 	position: relative;
@@ -112,3 +152,76 @@ body
 {
 	width:80px;
 }
+
+/****/
+
+.home_img {
+width: 60px;
+height: 60px;
+background: url(../img/manage/home.png);
+background-repeat: no-repeat;
+float: left;
+}
+.lost_img {
+width: 60px;
+height: 60px;
+background: url(../img/manage/pencil.png);
+background-repeat: no-repeat;
+float: left;
+}
+.find_img {
+width: 60px;
+height: 60px;
+background: url(../img/manage/pen_drive.png);
+background-repeat: no-repeat;
+float: left;
+}
+.info_img {
+width: 60px;
+height: 60px;
+background: url(../img/manage/alarm.png);
+background-repeat: no-repeat;
+float: left;
+}
+.message_img {
+width: 60px;
+height: 60px;
+background: url(../img/manage/antenna2.png);
+background-repeat: no-repeat;
+float: left;
+}
+#menu {
+    width: 350px;
+    height: 600px;
+    font-size: 16px;
+    font-family: Tahoma, Geneva, sans-serif;
+    font-weight: bold;
+    border-radius: 8px;
+    border-style: solid;
+    border-width: 4px;
+    border-color: #99CCFF;
+}
+#menu ul {
+    height: 480px;
+    padding: 8px 0px;
+    margin: 0px;
+}
+#menu li { 
+width:300px;
+display: inline; 
+padding: 20px;
+margin-left: 15px;
+margin-top: 25px;
+float: left;
+}
+
+#menu a {
+float: left;
+font-family: "Courier New", Courier, monospace;
+font-size: 23px;
+margin-left: 10px;
+margin-top: 35px;
+color: rgba(0, 0, 0, 0.38);
+}
+
+
