面向对象改造，评论，记录查看联系方式的信息

--- a/Application/Home/View/Detail/Detail.html
+++ b/Application/Home/View/Detail/Detail.html
@@ -21,7 +21,7 @@
 		<p>描述：{$thing_describe}</p>
 		<p>发布者：{$name}</p>
 		<p>发布时间：{$update_time}</p>
-		<p>联系方式：{$contact}</p>
+		<p>联系方式：<button class="btn btn-primary btn-sm getContact {$infoType}" id="{$id}">点击获取</button></p>
 	</div>
 	<div id="detailComment">
 		<h4><strong>评论:</strong></h4>
