--- a/Public/css/application.css
+++ b/Public/css/application.css
@@ -116,9 +116,10 @@ background-repeat: no-repeat;
 {
 	position:fixed;
 	bottom:-120px;
-	left:20px;
-	width:150px;
-	height:120px;
+	left:70px;
+	width:70px;
+	height:100px;
+	opacity: 0;
 	z-index:3;
 }
 
@@ -127,16 +128,17 @@ background-repeat: no-repeat;
 	width:150px;
 	height:200px;
 	background: #FFC;
+	opacity: 0;
 	position:fixed;
 	bottom:-320px;
 	left:15px;
 	border-radius:5px;
 	border: 1px solid #ddd;
-	box-shadow: 5px 5px 7px rgba(33,33,33,.7);
-	-webkit-transform: rotate(-4deg);
-		-moz-transform: rotate(-4deg);
-		-ms-transform: rotate(-4deg);
-			transform: rotate(-4deg);
+	box-shadow: 5px 5px 7px rgba(33,33,33,0.7);
+	-webkit-transform: rotate(-3deg);
+		-moz-transform: rotate(-3deg);
+		-ms-transform: rotate(-3deg);
+			transform: rotate(-3deg);
 
 	padding-left:10px;
 	padding-right:10px;
@@ -309,6 +311,27 @@ background-repeat: no-repeat;
 	margin-right:50px;
 }
 
+#filterBtn
+{
+	margin-right: 20px;
+}
+
+#searchInput
+{
+	width:250px;
+	margin-left: 20px;
+}
+
+.filterTimeLabel
+{
+	float:left;
+}
+
+#beginTime, #endTime
+{
+	width:260px;
+}
+
 #container
 {
 	position:relative;
@@ -413,6 +436,7 @@ background-repeat: no-repeat;
 #foot
 {
 	margin-top: -90px;
+	border-top: 1px solid #ddd;
 	height:80px;
 	width:100%;
 	background-color:#FFFFFF;
@@ -481,4 +505,38 @@ background-repeat: no-repeat;
 	-webkit-transition: .5s;
 	-moz-transition: .5s;
 	transition: .5s;
+}
+
+#commentBox
+{
+	width:100%;
+	height:0;
+	background-color: #FFFFCC;
+	border-top: 1px solid #ddd;
+	position: fixed;
+	bottom: 0px;
+	z-index: 10;
+}
+
+#hide
+{
+	position: absolute;
+	right: 20px;
+	top:50px;
+}
+
+#submit
+{
+	position: absolute;
+	right: 20px;
+	top: 10px;
+}
+
+#commentContent
+{
+	position: absolute;
+	right:150px;
+	margin-top: 5px;
+	width:500px;
+	height:90px;
 }
