--- a/Public/css/application.css
+++ b/Public/css/application.css
@@ -435,7 +435,7 @@ background-repeat: no-repeat;
 
 #foot
 {
-	margin-top: -90px;
+	margin-top: -80px;
 	border-top: 1px solid #ddd;
 	height:80px;
 	width:100%;
@@ -475,7 +475,7 @@ background-repeat: no-repeat;
 
 #detailInfo
 {
-	width:300px;
+	width:400px;
 	margin-left: 20px;
 	padding-left: 20px;
 	border-left: 1px solid #ddd;
@@ -486,14 +486,14 @@ background-repeat: no-repeat;
 
 #detailComment
 {
-	width:300px;
+	width:400px;
 	margin-left: 20px;
 	margin-top: 10px;
 	padding-left: 20px;
 	border-left: 1px solid #ddd;
 	border-top: 1px solid #ddd;
 	border-top-left-radius: 5px;
-	height:100px;
+	//height:100px;
 }
 
 #detailComment h4
@@ -509,13 +509,14 @@ background-repeat: no-repeat;
 
 #commentBox
 {
+	position: fixed;
 	width:100%;
 	height:0;
-	background-color: #FFFFCC;
+	background-color: white;
 	border-top: 1px solid #ddd;
-	position: fixed;
 	bottom: 0px;
 	z-index: 10;
+	box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
 }
 
 #hide
@@ -539,4 +540,16 @@ background-repeat: no-repeat;
 	margin-top: 5px;
 	width:500px;
 	height:90px;
+}
+
+#commentContent2
+{
+	margin-left: 20px;
+	width: 400px;
+}
+
+#submit2
+{
+	float: right;
+	margin-top: 5px;
 }
